Added links and fixed errors

--- a/week01/styles/chamber.css
+++ b/week01/styles/chamber.css
@@ -48,7 +48,6 @@ footer {
 
 nav {
     background-color: var(--light-accent);
-    color: var(--dark-neutral);
     text-align: center;
     border-bottom: 2px solid var(--very-dark-neutral);
 }
@@ -59,6 +58,13 @@ nav li {
 
 nav a {
     padding: 10px;
+    text-decoration: none;
+    color: var(--dark-neutral);
+}
+
+.active {
+    font-weight: 600;
+    border: 1px solid black;
 }
 
 nav a:hover {
