--- a/week01/styles/chamber-large.css
+++ b/week01/styles/chamber-large.css
@@ -1,4 +1,4 @@
-@media (min-width: 410px) {
+@media (min-width: 970px) {
 
     body {
         margin: 0 auto;
@@ -9,7 +9,38 @@
         justify-content: space-evenly;
     }
 
-    h1 {
-        font-size: large;
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
+
+    main div:nth-child(1) {
+        grid-column: 1/2;
+    }
+
+    main div:nth-child(2) {
+        grid-column: 2/3;
+    }
+
+    main div:nth-child(3) {
+        grid-column: 3/5;
+    }
+
+    main div:nth-child(4) {
+        grid-column: 1/3;
+    }
+
+    main div:nth-child(5) {
+        grid-column: 3/5;
+    }
+
+    main div:nth-child(6) {
+        grid-column: 1/5;
+    }
+
+    #wireframes {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
 }
