--- a/styles/base.css
+++ b/styles/base.css
@@ -44,29 +44,59 @@ header span {
     padding: 15px;
 }
 
-nav {
-    margin: 0 auto;
-    background-color: var(--dark-accent);
-    border: 2px solid black;
+#menu {
+    background-color: transparent;
+    border-radius: 5px;
+    color: white;
+    font-size: 1.3rem;
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
 }
 
-nav a {
-    display: block;
-    color: white;
+#menu::before {
+    content: "☰";
+}
+
+#menu.open::before {
+    content: "❌";
+}
+
+.navigation {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    background-color: var(--dark-accent);
+    border: 2px solid black;
+    min-height: 2.1rem;
+
+}
+
+.navigation a {
+    display: none;
     text-align: center;
+    color: white;
     text-decoration: none;
     font-weight: 300;
     padding: 5px;
 }
 
-nav a:hover {
+.navigation a:hover {
     background-color: var(--medium-accent);
     border: 1px solid black;
 }
 
+.open a {
+    display: block;
+}
+
 .active {
-    font-weight: 600;
-    border: 1px solid black;
+    border: 1pt solid black;
+    background-color: #c1121f;
+}
+
+.active::before {
+    content: "😏 ";
 }
 
 main {
@@ -77,7 +107,7 @@ main {
 h1,
 .card {
     margin: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 h1 {
