--- a/styles/base.css
+++ b/styles/base.css
@@ -34,6 +34,16 @@ header {
     position: relative;
 }
 
+#drkMode {
+    position: absolute;
+    top: .5rem;
+    left: .5rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    background: var(--light-neutral);
+    border-radius: 50%;
+}
+
 #deana {
     border: 1px solid black;
     border-radius: 5px;
@@ -107,8 +117,35 @@ main {
     margin-bottom: 1rem;
 }
 
+.hero {
+    position: relative;
+}
+
+#hero-label {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    padding: .5rem;
+    border: 1px solid #9d9fa1;
+    background: radial-gradient(white, #a4a9ad);
+    font-weight: 600;
+    text-align: center;
+    font-size: 80%;
+}
+
+.hero picture {
+    width: 100%;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
 h1,
-.card {
+.card,
+.map {
     margin: 10px;
     margin-bottom: 5px;
 }
@@ -127,7 +164,8 @@ h1 {
     box-shadow: 5px 5px 10px var(--dark-neutral);
 }
 
-.card h2 {
+.card h2,
+.map h2 {
     background: var(--medium-neutral);
     text-align: center;
     font-size: large;
@@ -135,8 +173,32 @@ h1 {
 }
 
 .card ul,
-.card div {
+.card div,
+.card p {
     padding: 10px;
+}
+
+.card p {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.visits {
+    font-weight: 600;
+}
+
+.map {
+    margin-top: 1.5rem;
+    border: 1px solid var(--medium-neutral);
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px var(--dark-neutral);
+}
+
+iframe {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 footer {
@@ -146,22 +208,11 @@ footer {
     padding: 15px;
     font-size: smaller;
     border-top: 1px solid var(--medium-accent);
-    ;
 }
 
 #lastModified {
     font-size: x-small;
     color: var(--light-neutral);
-    padding-top: 2px;
+    padding-top: 5px;
     font-weight: 300;
-}
-
-#drkMode {
-    position: absolute;
-    top: .5rem;
-    left: .5rem;
-    cursor: pointer;
-    font-size: 1.5rem;
-    background: var(--light-neutral);
-    border-radius: 50%;
 }
