--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -73,6 +73,13 @@
         grid-template-columns: 1fr 2fr;
     }
 
+    .discover-pics img {
+        display: block;
+        width: 100%;
+        height: auto;
+        padding: 50px 30px 30px 50px;
+    }
+
     .discover-pics img:hover {
         padding: 0px;
         border: 4px solid var(--dark-neutral);
