--- a/styles/base.css
+++ b/styles/base.css
@@ -7,7 +7,6 @@
 }
 
 :root {
-    /* change the values below to your colors from your palette */
     --light-neutral: #fdf0d5;
     --dark-neutral: #003049;
     --medium-neutral: #669bbc;
@@ -176,6 +175,11 @@ h1 {
 .card div,
 .card p {
     padding: 10px;
+}
+
+li a {
+    text-decoration: none;
+    color: var(--medium-accent);
 }
 
 .card p {
