--- a/week04/Form-start/css/small.css
+++ b/week04/Form-start/css/small.css
@@ -11,7 +11,6 @@ html {
     box-sizing: border-box;
 }
 
-
 /*----------- BODY --------------*/
 body {
     font-size: 16px;
@@ -72,7 +71,7 @@ main {
 
 /*-----------FORM STYLING-----------*/
 
-.wfl fieldset {
+.wf1 fieldset {
     margin: 2rem 0;
     border: 1px solid #ddd;
     border-radius: 6px;
@@ -95,6 +94,8 @@ main {
     padding-top: 1rem;
     color: #445ba9;
     font-size: .9rem;
+    margin-top: .7rem;
+
 }
 
 .wf1 input[type="text"],
@@ -122,13 +123,13 @@ main {
 
 .wf1 input[type="submit"] {
     border: none;
-    background-image: linear-gradient(#9c2c13, #6f200e);
+    background-image: linear-gradient(#3944db, #1405ee);
     color: #fff;
     border-radius: 6px;
     padding: .75rem;
     width: 96%;
     max-width: 400px;
-    margin: 1rem 2% 2rem 2%;
+    margin: -1rem 2% 2rem 2%;
     box-shadow: 1px 1px 4px #999;
 }
 
