adjust dark mode to have some functionality on form page

--- a/styles/form.css
+++ b/styles/form.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 10px;
     max-width: 450px;
+    background-color: var(--light-neutral);
 }
 
 .fmRate fieldset {
