--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -122,27 +122,30 @@ header h1 {
 #hero img {
     display: block;
     width: 100%;
-    opacity: 80%;
     margin: 0;
+    z-index: 0;
 }
 
 .action {
-    display: none;
+    width: 100%;
+    display: block;
+    margin-top: -10rem;
+    margin-bottom: 5.5rem;
+    z-index: 1;
     text-align: center;
-    margin: 0 auto;
 }
 
-.action a {
-    display: inline-block;
-    margin: 20px;
-    border: 4px solid black;
-    width: 200px;
-    padding: 80px 0px;
+#join {
+    display: inline;
+    background-image: radial-gradient(var(--light-accent), var(--medium-accent));
+    box-shadow: 4px 4px 4px black;
+    border: 1px solid var(--dark-neutral);
+    border-radius: 25px;
+    width: 150px;
+    padding: 10px;
     text-align: center;
-    background: var(--light-accent);
-    font-size: larger;
+    font-size: medium;
     cursor: pointer;
-    text-decoration: none;
     color: black;
 }
 
@@ -211,9 +214,22 @@ aside p {
     padding: 2px;
 }
 
-.discover-pics img {
+.discover-pics div {
     display: block;
     width: 100%;
     height: auto;
-    margin: 25px 0px;
+    margin: 0px;
+    padding: 0;
+}
+
+.discover-pics p {
+    display: block;
+    text-align: center;
+    margin-top: -5rem;
+    background-color: #16271f;
+    color: white;
+    margin-bottom: 5rem;
+    font-size: larger;
+    padding: 10px;
+    opacity: 80%;
 }
