--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -318,3 +318,16 @@ input::placeholder {
     color: var(--light-accent);
     font-weight: 400;
 }
+
+.thankyou {
+    max-width: 500px;
+    padding: 1rem;
+    margin: 5em auto;
+    background-color: var(--light-neutral);
+    border: 3px solid var(--dark-neutral);
+    border-radius: 5px;
+}
+
+.thankyou p {
+    margin: 1rem;
+}
