--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -72,4 +72,33 @@
         border: 4px solid var(--dark-neutral);
         cursor: pointer;
     }
+
+    .pgJoin main {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+
+    .pgJoin main h2 {
+        grid-column: 2/3;
+    }
+
+    #asideJoin {
+        display: block;
+        grid-column: 1/2;
+        grid-row: 1/3;
+        background: rgba(var(--light-neutral-rgb), 0.4);
+        border: 1px solid var(--light-neutral);
+    }
+
+    #asideJoin div {
+        padding: 1rem .5rem;
+    }
+
+    #asideJoin h3 {
+        color: var(--medium-accent);
+        font-weight: 600;
+        font-size: 140%;
+        padding: 5rem .5rem .2rem .5rem;
+    }
+
 }
