--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -83,11 +83,10 @@
     }
 
     #asideJoin {
-        display: block;
         grid-column: 1/2;
         grid-row: 1/3;
-        background: rgba(var(--light-neutral-rgb), 0.4);
-        border: 1px solid var(--light-neutral);
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     #asideJoin div {
@@ -95,9 +94,6 @@
     }
 
     #asideJoin h3 {
-        color: var(--medium-accent);
-        font-weight: 600;
-        font-size: 140%;
         padding: 5rem .5rem .2rem .5rem;
     }
 
