--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -13,16 +13,19 @@ footer {
 }
 
 h1 {
+    display: block;
     color: #000;
     border-bottom: 1px solid #eee;
     text-shadow: 0 0 15px #777;
     width: 60%;
+    text-align: center;
+    margin: 0 auto;
 }
 
 h2 {
     color: brown;
-    margin: 0 0 1rem 0;
-    border-bottom: 2px solid #bbb;
+    margin: 1rem 0 .5rem 0;
+    border-bottom: 1px solid #bbb;
 }
 
 main {
@@ -30,14 +33,24 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
 
-section {
+#cards {
     margin: 0.25rem;
     padding: 0.35rem;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    text-align: center;
+}
+
+section {
+    padding: .5rem;
+    margin: .5rem;
     background-color: #eee;
     border: 1px solid #bbb;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+
+p {
+    margin: 0;
 }
 
 img {
@@ -46,4 +59,6 @@ img {
     box-shadow: 0 0 30px #777;
     height: 200px;
     border: 1px solid #333;
+    margin-top: .5rem;
+    margin-bottom: 1rem;
 }
