--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -383,6 +383,12 @@ input::placeholder {
     border-radius: 5px;
 }
 
+.grid img {
+    padding: 1rem;
+    margin: 0;
+    border: 1px solid red;
+}
+
 .list {
     display: flex;
     flex-direction: column;
