--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -386,7 +386,7 @@ input::placeholder {
 .grid img {
     padding: 1rem;
     margin: 0;
-    border: 1px solid red;
+    text-align: center;
 }
 
 .list {
