--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -48,7 +48,7 @@ footer {
     background-color: var(--very-dark-neutral);
     color: white;
     text-align: center;
-    min-height: 2rem;
+    min-height: 1.5rem;
 }
 
 header h1 {
@@ -102,6 +102,25 @@ header h1 {
     color: white;
 }
 
+#banner {
+    background: black;
+    color: white;
+    padding: 20px;
+    position: relative;
+}
+
+#bannerMsg {
+    text-align: center;
+    font-size: larger;
+}
+
+#closeBanner {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+}
+
 .open a {
     display: block;
 }
@@ -127,15 +146,6 @@ header h1 {
     z-index: 0;
 }
 
-.action {
-    width: 100%;
-    display: block;
-    margin-top: -10rem;
-    margin-bottom: 6.5rem;
-    z-index: 1;
-    text-align: center;
-}
-
 #join,
 input[type="submit"] {
     display: inline;
@@ -152,24 +162,16 @@ input[type="submit"] {
     color: black;
 }
 
-main section {
-    margin-top: 15px;
-    margin-bottom: 15px;
+.action {
+    width: 100%;
+    display: block;
+    margin-top: -10rem;
+    margin-bottom: 6.5rem;
+    z-index: 1;
+    text-align: center;
 }
 
-.info,
-.spotlight {
-    justify-content: center;
-    background: var(--light-neutral);
-    padding: 4rem 1rem;
-}
-
-.spotlight {
-    margin-bottom: 0;
-}
-
-.info img,
-.spotlight img {
+.info img {
     border: 2px solid var(--very-dark-neutral);
     background: white;
     width: 20rem;
@@ -191,12 +193,13 @@ main section {
     border-radius: 5px;
 }
 
+/* -------------- WEATHER on HOME page ----------------*/
 .weather {
     text-align: center;
     display: grid;
     grid: 1fr auto;
     max-width: 500px;
-    margin: 5rem auto;
+    margin: .5rem auto 4rem auto;
     border: 2px solid var(--dark-neutral);
     padding: 5px;
     border-radius: 5px;
@@ -291,6 +294,63 @@ main section {
     padding: 5px;
 }
 
+
+/* ------------------SPOTLIGHT on HOME page ----------------*/
+.info,
+.spotlight {
+    justify-content: center;
+    background-image: linear-gradient(var(--light-neutral), white);
+    padding: 4rem 1rem;
+}
+
+.spotlight {
+    margin-bottom: 0;
+}
+
+.gold,
+.silver {
+    border-radius: 5px;
+    margin: 1rem;
+    background: white;
+}
+
+.gold {
+    border: 6px solid var(--very-dark-neutral);
+    margin-bottom: 3rem;
+
+}
+
+.silver {
+    border: 2px solid var(--very-dark-neutral);
+}
+
+.gold img,
+.silver img {
+    display: block;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+.gold h3,
+.silver h3 {
+    text-decoration-line: none;
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+.gold p,
+.silver p {
+    background: rgba(var(--light-neutral-rgb), 0.6);
+    color: black;
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 5px;
+    font-size: large;
+    line-height: 1.5em;
+}
+
+
+/*----------------HOME page FOOTER --------------------------*/
 footer {
     padding: 40px;
 }
